[gd_scene load_steps=8 format=3 uid="uid://db5sh214c1rw4"]

[ext_resource type="PackedScene" uid="uid://brj733tcgn23c" path="res://grid-movement/game-board.tscn" id="1_5lrab"]
[ext_resource type="Texture2D" uid="uid://dh00byov5r1y5" path="res://grid-movement/art/dark_piece.png" id="1_ym2k5"]
[ext_resource type="Theme" uid="uid://dhg6xxqfswn5q" path="res://grid-movement/dark_theme.tres" id="2_0uvsu"]
[ext_resource type="Script" path="res://grid-movement/turn_readout.gd" id="4_nabsp"]
[ext_resource type="Texture2D" uid="uid://bh33dh1fhiaal" path="res://grid-movement/art/light_piece.png" id="5_4wr66"]
[ext_resource type="Texture2D" uid="uid://bv0q4pgp6mm7y" path="res://grid-movement/art/dark-king.png" id="7_45v1t"]
[ext_resource type="Texture2D" uid="uid://ckmg87wuhlh57" path="res://grid-movement/art/light-king.png" id="8_wdw1d"]

[node name="GameScreen" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_nabsp")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_0uvsu")

[node name="LeftContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
offset_right = 320.0
offset_bottom = 648.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/LeftContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel2" type="Panel" parent="CanvasLayer/Control/LeftContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/LeftContainer/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/LeftContainer/HBoxContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_4wr66")

[node name="Label" type="Label" parent="CanvasLayer/Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PIECES WON"
horizontal_alignment = 1

[node name="LightsCaptures" type="GridContainer" parent="CanvasLayer/Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="TurnReadout" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = 115.0
grow_horizontal = 2
theme = ExtResource("2_0uvsu")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="WhosTurn" type="Panel" parent="CanvasLayer/Control/TurnReadout"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/TurnReadout/WhosTurn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Readout" type="HBoxContainer" parent="CanvasLayer/Control/TurnReadout/WhosTurn/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" type="TextureRect" parent="CanvasLayer/Control/TurnReadout/WhosTurn/MarginContainer/Readout"]
layout_mode = 2
texture = ExtResource("5_4wr66")
stretch_mode = 2

[node name="Text" type="Label" parent="CanvasLayer/Control/TurnReadout/WhosTurn/MarginContainer/Readout"]
layout_mode = 2
text = "LIGHT'S TURN TO PLAY"

[node name="WhoWon" type="Panel" parent="CanvasLayer/Control/TurnReadout"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="CanvasLayer/Control/TurnReadout/WhoWon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="CanvasLayer/Control/TurnReadout/WhoWon/Margin"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="CanvasLayer/Control/TurnReadout/WhoWon/Margin/HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("8_wdw1d")

[node name="Text" type="Label" parent="CanvasLayer/Control/TurnReadout/WhoWon/Margin/HBox"]
layout_mode = 2
text = "LIGHT WINS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/TurnReadout/WhoWon/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY AGAIN?"

[node name="RightContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -324.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_0uvsu")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/RightContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel2" type="Panel" parent="CanvasLayer/Control/RightContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_ym2k5")

[node name="Label" type="Label" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PIECES WON"
horizontal_alignment = 1

[node name="DarksCaptures" type="GridContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="DarkWins" type="VBoxContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/DarkWins"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/DarkWins/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("7_45v1t")

[node name="WinLabel" type="Label" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/DarkWins/VBoxContainer"]
layout_mode = 2
text = "DARK WINS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/DarkWins"]
layout_mode = 2
alignment = 1

[node name="PlayAgain" type="Button" parent="CanvasLayer/Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer/DarkWins/HBoxContainer"]
layout_mode = 2
text = "PLAY AGAIN?"

[node name="Board" parent="." instance=ExtResource("1_5lrab")]
position = Vector2(576, 368)

[connection signal="game_won" from="Board" to="CanvasLayer" method="handle_win"]
[connection signal="piece_added_to_jail" from="Board" to="CanvasLayer" method="add_piece_to_captured_readout"]
[connection signal="player_turn_changed" from="Board" to="CanvasLayer" method="handle_turn_change"]
[connection signal="turn_changed" from="Board" to="CanvasLayer" method="handle_turn_change"]
