[gd_scene load_steps=6 format=3 uid="uid://c88ccftr5o2xt"]

[ext_resource type="Script" path="res://grid-movement/turn_readout.gd" id="1_ju74g"]
[ext_resource type="Theme" uid="uid://dhg6xxqfswn5q" path="res://grid-movement/dark_theme.tres" id="2_kutyk"]
[ext_resource type="Texture2D" uid="uid://bh33dh1fhiaal" path="res://grid-movement/art/light_piece.png" id="3_4qqdq"]
[ext_resource type="Texture2D" uid="uid://ckmg87wuhlh57" path="res://grid-movement/art/light-king.png" id="4_gkmsy"]
[ext_resource type="Texture2D" uid="uid://dh00byov5r1y5" path="res://grid-movement/art/dark_piece.png" id="5_pp6ix"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_ju74g")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_kutyk")

[node name="LeftContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 320.0
offset_bottom = 648.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="VBoxContainer" parent="Control/LeftContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel2" type="Panel" parent="Control/LeftContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/LeftContainer/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LeftContainer/HBoxContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_4qqdq")

[node name="Label" type="Label" parent="Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PIECES WON"
horizontal_alignment = 1

[node name="LightsCaptures" type="GridContainer" parent="Control/LeftContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="TurnReadout" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -323.0
offset_right = 256.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kutyk")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="WhosTurn" type="Panel" parent="Control/TurnReadout"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/TurnReadout/WhosTurn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -17.5
offset_right = 184.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Readout" type="HBoxContainer" parent="Control/TurnReadout/WhosTurn/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="Control/TurnReadout/WhosTurn/MarginContainer/Readout"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("3_4qqdq")
expand_mode = 2

[node name="Text" type="Label" parent="Control/TurnReadout/WhosTurn/MarginContainer/Readout"]
layout_mode = 2
text = "LIGHT'S TURN TO PLAY"

[node name="WhoWon" type="Panel" parent="Control/TurnReadout"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Control/TurnReadout/WhoWon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="Control/TurnReadout/WhoWon/Margin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="Control/TurnReadout/WhoWon/Margin/HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_gkmsy")
expand_mode = 2

[node name="Text" type="Label" parent="Control/TurnReadout/WhoWon/Margin/HBox"]
layout_mode = 2
text = "LIGHT WINS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control/TurnReadout/WhoWon/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "REMATCH?"

[node name="RightContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -324.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_kutyk")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="VBoxContainer" parent="Control/RightContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel2" type="Panel" parent="Control/RightContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/RightContainer/HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/RightContainer/HBoxContainer/Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_pp6ix")

[node name="Label" type="Label" parent="Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PIECES WON"
horizontal_alignment = 1

[node name="DarksCaptures" type="GridContainer" parent="Control/RightContainer/HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[connection signal="pressed" from="Control/TurnReadout/WhoWon/Margin/HBox/Button" to="." method="play_again"]
